--- a/rAppla/res/layout/fragment1.xml
+++ b/rAppla/res/layout/fragment1.xml
@@ -32,8 +32,8 @@
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="38dp"
-        android:text="@string/calc" 
-        android:onClick="onCalcButtonPressed"/>
+        android:onClick="onCalcButtonPressed"
+        android:text="@string/calc"/>
 
     <TextView
         android:id="@+id/textView1"
