--- a/rAppla/res/menu/main.xml
+++ b/rAppla/res/menu/main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/settings"/>
-
+    <item android:id="@+id/action_refresh"
+          android:icon="@drawable/ic_action_refresh"
+          android:title="@string/refresh"
+          android:showAsAction="ifRoom" />
+    
+    <item android:id="@+id/action_settings"
+          android:title="@string/settings"
+          android:icon="@drawable/ic_action_settings_light"
+          android:showAsAction="ifRoom" />
 </menu>
