--- a/rAppla/res/layout/daylayout.xml
+++ b/rAppla/res/layout/daylayout.xml
@@ -1,4 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent" >
+
+    <GridLayout
+        android:id="@+id/dayGrid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </GridLayout>
+
+</ScrollView>
