--- a/rAppla/res/layout/weeklayout.xml
+++ b/rAppla/res/layout/weeklayout.xml
@@ -1,11 +1,18 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <GridLayout
-        android:id="@+id/weekGrid"
+    <app.rappla.RapplaGrid
+        
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </GridLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:numOfColumns="5"
+        app:numOfRows="40"
+        
+        android:id="@+id/weekGrid"/>
 
 </ScrollView>
