--- a/rAppla/res/layout/weeklayout.xml
+++ b/rAppla/res/layout/weeklayout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <app.rappla.RapplaGrid
+    <RapplaGrid.RapplaGrid
         
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
