--- a/rAppla/res/layout/daylayout.xml
+++ b/rAppla/res/layout/daylayout.xml
@@ -1,11 +1,18 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <GridLayout
-        android:id="@+id/dayGrid"
+    <RapplaGrid.RapplaGrid
+        
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </GridLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:columnCount="1"
+        android:rowCount="40"
+        
+        android:id="@+id/dayGrid"/>
 
 </ScrollView>
