--- a/rAppla/res/layout/daylayout.xml
+++ b/rAppla/res/layout/daylayout.xml
@@ -1,18 +1,8 @@
-<ScrollView 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RapplaGrid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    
+    android:id="@+id/dayGrid"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <RapplaGrid.RapplaGrid
-        
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:columnCount="1"
-        android:rowCount="40"
-        
-        android:id="@+id/dayGrid"/>
-
-</ScrollView>
+    android:layout_height="match_parent"
+    android:columnCount="1"
+    android:orientation="horizontal"
+    android:rowCount="60" />
