--- a/rAppla/res/layout/daylayout.xml
+++ b/rAppla/res/layout/daylayout.xml
@@ -1,8 +1,7 @@
 <RapplaGrid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dayGrid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="1"
-    android:orientation="horizontal"
-    android:rowCount="60" />
+    android:rowCount="45"
+/>
