--- a/rAppla/res/layout/weeklayout.xml
+++ b/rAppla/res/layout/weeklayout.xml
@@ -1,8 +1,7 @@
 <RapplaGrid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/weekGrid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="5"
-    android:orientation="horizontal"
-    android:rowCount="45" />
+    android:rowCount="45" 
+/>
