--- a/rAppla/res/layout/layout_notes.xml
+++ b/rAppla/res/layout/layout_notes.xml
@@ -3,19 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:inputType="textMultiLine" >
-
-        <requestFocus />
-    </EditText>
+    <ImageView android:id="@+id/imageView1" android:layout_width="400dp" android:layout_height="400dp" android:src="@drawable/stickynote" />
 
     <Button
         android:id="@+id/button1"
@@ -25,12 +13,13 @@
         android:layout_centerHorizontal="true"
         android:text="Speichern" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_above="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/stickynote" />
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textMultiLine" />
 
 </RelativeLayout>
