--- a/rAppla/res/layout/layout_notes.xml
+++ b/rAppla/res/layout/layout_notes.xml
@@ -9,23 +9,25 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Speichern" />
+        android:text="@string/save" 
+        android:onClick="onClickedSave" />
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="430dp"
         android:layout_height="430dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:contentDescription=" "
         android:src="@drawable/stickynote" />
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="250dp"
         android:layout_height="350dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerHorizontal	="true"
+        android:layout_centerVertical	="true"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textMultiLine" >
 
         <requestFocus />
