--- a/rAppla/res/layout/layout_information.xml
+++ b/rAppla/res/layout/layout_information.xml
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/editText5"
         android:layout_alignLeft="@+id/textView4"
-        android:text="TextView" />
+        android:text="Ressourcen" />
 
     <Button
         android:id="@+id/button1"
