--- a/rAppla/res/layout/layout_alarms.xml
+++ b/rAppla/res/layout/layout_alarms.xml
@@ -23,4 +23,20 @@
         android:layout_toLeftOf="@+id/button1"
         android:text="Erstellen" />
 
+    <ScrollView
+        android:id="@+id/scrollViewAlarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
