Changed some test stuff
Added first scribble of the Alarm-Use-Case

--- a/rAppla/res/layout/layout_alarms.xml
+++ b/rAppla/res/layout/layout_alarms.xml
@@ -5,36 +5,36 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
-        android:text="Speichern" />
-
+        android:text="@string/save"/>
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="30dp"
-        android:layout_toLeftOf="@+id/button1"
-        android:text="Erstellen" />
+        android:layout_toLeftOf="@+id/btnSave"
+        android:text="@string/add" />
 
     <ScrollView
         android:id="@+id/scrollViewAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
+        android:layout_above="@+id/btnSave"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/alarmHolder"
             android:orientation="vertical" >
         </LinearLayout>
     </ScrollView>
