edited RapplaGrid's onLayout(), corrected attrs.xml

--- a/rAppla/res/layout/layout_week.xml
+++ b/rAppla/res/layout/layout_week.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <app.rappla.ui.grid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/app.rappla"
     android:id="@+id/layout_week"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="5"
-    android:rowCount="50" >
+    app:columnCount="5"
+    app:rowCount="50" >
 
 </app.rappla.ui.grid.RapplaGrid>
