--- a/rAppla/res/layout/layout_day.xml
+++ b/rAppla/res/layout/layout_day.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <app.rappla.ui.grid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/app.rappla"
     android:id="@+id/layout_day"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="1"
-    android:rowCount="45"
-/>
+    app:columnCount="1"
+    app:rowCount="45" />
