--- a/rAppla/res/layout/layout_notes.xml
+++ b/rAppla/res/layout/layout_notes.xml
@@ -17,11 +17,11 @@
         android:layout_width="430dp"
         android:layout_height="430dp"
         android:layout_alignParentLeft="true"
-        android:contentDescription=" "
         android:src="@drawable/stickynote" />
 
     <EditText
         android:id="@+id/editText1"
+        android:contentDescription="noteTextEdit"
         android:layout_width="250dp"
         android:layout_height="350dp"
         android:layout_centerHorizontal	="true"
