Implemented the updateinterval showing as summary in the SettingsFragment

--- a/rAppla/res/layout/fragment_settings.xml
+++ b/rAppla/res/layout/fragment_settings.xml
@@ -12,6 +12,7 @@
         android:title="@string/wifiSync" />
 
     <ListPreference
+        android:id="@+id/interval"
         android:dependency="offlineSync"
         android:dialogTitle="@string/updateInterval"
         android:entries="@array/UpdateIntervals_Entries"
