--- a/rAppla/res/menu/actionbar_main.xml
+++ b/rAppla/res/menu/actionbar_main.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@+id/action_today"
-          android:title="@string/today"
-          android:icon="@drawable/ic_today"
-          android:showAsAction="ifRoom" />
-    
-    <item android:id="@+id/action_refresh"
-          android:icon="@drawable/ic_action_refresh"
-          android:title="@string/refresh"
-          android:showAsAction="ifRoom" />
-    
-    <item android:id="@+id/action_settings"
-          android:title="@string/settings"
-          android:icon="@drawable/ic_action_settings_light"
-          android:showAsAction="ifRoom" />
-    
+    <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/refresh"/>
+    <item
+        android:id="@+id/action_today"
+        android:icon="@drawable/ic_today"
+        android:showAsAction="ifRoom"
+        android:title="@string/today"/>
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_action_settings_light"
+        android:showAsAction="ifRoom"
+        android:title="@string/settings"/>
+
 </menu>
