--- a/rAppla/res/layout/layout_week.xml
+++ b/rAppla/res/layout/layout_week.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<app.rappla.ui.grid.RapplaGrid xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/app.rappla"
-    android:id="@+id/layout_week"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:columnCount="5"
-    app:rowCount="50" >
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:columnCount="2"
+    android:rowCount="2" >
 
-</app.rappla.ui.grid.RapplaGrid>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:contentDescription="@string/timeBar"
+        android:src="@drawable/timebar" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:contentDescription="@string/dayBar"
+        android:src="@drawable/daybar" />
+
+    <app.rappla.ui.grid.RapplaGrid
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res/app.rappla"
+        android:id="@+id/layout_week"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_column="1"
+        android:layout_row="1"
+        app:columnCount="5"
+        app:rowCount="50" />
+
+</GridLayout>
