--- a/rAppla/res/layout/layout_info.xml
+++ b/rAppla/res/layout/layout_info.xml
@@ -4,26 +4,67 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/beginView"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="32dp"
+        android:src="@drawable/event" />
+    <ImageView
+        android:id="@+id/imagePin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/pin" />
+
+    <TextView
+        android:id="@+id/ressourcesView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="110dp"
+        android:gravity="center"
         android:text="@string/empty"
-        android:gravity="right"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+    
     <TextView
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/beginView"
+        android:layout_above="@+id/ressourcesView"
+        android:layout_marginBottom="175dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:text="@string/empty"
-        android:gravity="right"
+        android:textAlignment="gravity"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <TextView
+        android:id="@+id/dateView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ressourcesView"
+        android:layout_marginBottom="130dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="@string/empty"
+        android:textAlignment="gravity"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <TextView
+        android:id="@+id/beginView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ressourcesView"
+        android:layout_marginBottom="70dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="45dp"
+        
+        
+        android:gravity="center"
+        android:text="@string/empty"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -31,85 +72,27 @@
         android:id="@+id/endView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_alignRight="@+id/beginView"
+        android:layout_above="@+id/ressourcesView"
+        android:layout_marginBottom="70dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="45dp"
+        
+        android:gravity="center"
         android:text="@string/empty"
-        android:gravity="right"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/ressourcesView"
+        android:id="@+id/minusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignLeft="@+id/endView"
-        android:text="@string/empty"
-        android:gravity="right"
+        android:layout_above="@+id/ressourcesView"
+        android:layout_marginBottom="70dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="-"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
-        android:text="@string/title"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="25dp"
-        android:text="@string/ressources"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/dateView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignRight="@+id/ressourcesView"
-        android:text="@string/empty"
-        android:gravity="right"
-        android:textAlignment="gravity"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="25dp"
-        android:text="@string/endtime"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="25dp"
-        android:text="@string/starttime"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView5"
-        android:layout_marginTop="25dp"
-        android:text="@string/date"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
