--- a/rAppla/res/layout/layout_info.xml
+++ b/rAppla/res/layout/layout_info.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:contentDescription="@string/empty"
         android:src="@drawable/event" />
     <ImageView
