--- a/rAppla/res/layout/layout_notes.xml
+++ b/rAppla/res/layout/layout_notes.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="430dp"
-        android:layout_height="430dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:src="@drawable/stickynote" 
         android:labelFor="@+id/editText1" />
